# ChangeLog for dev-ruby/ruby-activeldap
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-activeldap/ChangeLog,v 1.27 2011/01/10 17:55:12 graaff Exp $

  10 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  ruby-activeldap-1.2.2.ebuild:
  Keyword ~x86-macos.

  09 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  ruby-activeldap-1.2.2.ebuild:
  Loosen ruby-gettext dependency a bit to include patched version.

  11 Dec 2010; Hans de Graaff <graaff@gentoo.org>
  -ruby-activeldap-1.2.1-r1.ebuild, -ruby-activeldap-1.2.1-r2.ebuild:
  Remove old versions.

  11 Dec 2010; Hans de Graaff <graaff@gentoo.org>
  ruby-activeldap-1.2.2.ebuild:
  Expand gettext_activerecord dependency to include most recent version.

*ruby-activeldap-1.2.2 (06 Jul 2010)

  06 Jul 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-activeldap-1.2.2.ebuild:
  Version bump with bug fixes.

*ruby-activeldap-1.2.1-r2 (23 May 2010)

  23 May 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-activeldap-1.2.1-r2.ebuild:
  Be more lenient towards newer Rails versions in the same slot.
  Use correct name for gemspec file.

*ruby-activeldap-1.2.1-r1 (23 May 2010)

  23 May 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-activeldap-1.2.1-r1.ebuild:
  Convert to ruby-fakegem.

  23 May 2010; Hans de Graaff <graaff@gentoo.org>
  -ruby-activeldap-0.8.3.1.ebuild:
  Remove old version.

  21 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  ruby-activeldap-1.2.1.ebuild:
  ia64 stable wrt #302065

  17 Feb 2010; Markus Meier <maekke@gentoo.org>
  ruby-activeldap-1.2.1.ebuild:
  amd64/x86 stable, bug #302065

  16 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  ruby-activeldap-1.2.1.ebuild:
  Relax dependency to include revisions.

*ruby-activeldap-1.2.1 (17 Dec 2009)

  17 Dec 2009; Hans de Graaff <graaff@gentoo.org>
  -ruby-activeldap-1.2.0.ebuild, +ruby-activeldap-1.2.1.ebuild:
  Version bump. Remove old version which depends on rails and gettext